--- a/index.html
+++ b/index.html
@@ -16,14 +16,20 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand" href="index.html">
+        <img classs="img-responsive" width="130px" height="" src="CalvertExt-logo.png" style="position:relative;">
+      </a>
+
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -33,20 +39,29 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="dog-runs.html">Dog Runs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="services.html"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Portfolio
+              Pest Index
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
+              <a class="dropdown-item" href="portfolio-1-col.html">Ants</a>
+              <a class="dropdown-item" href="portfolio-2-col.html">Bed Bugs</a>
+              <a class="dropdown-item" href="portfolio-3-col.html">Cockroaches</a>
+              <a class="dropdown-item" href="portfolio-4-col.html">Flies</a>
+              <a class="dropdown-item" href="portfolio-4-col.html">Mosquitoes</a>
+              <a class="dropdown-item" href="portfolio-4-col.html">Rodents</a>
+              <a class="dropdown-item" href="portfolio-4-col.html">Stinging Pests</a>
+              <a class="dropdown-item" href="portfolio-4-col.html">Termites</a>
+              <a class="dropdown-item" href="portfolio-4-col.html">Other Pests</a>
+
               <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
             </div>
           </li>
@@ -72,8 +87,17 @@
               <a class="dropdown-item" href="pricing.html">Pricing Table</a>
             </div>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
         </ul>
       </div>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html"><i class="fa fa-envelope"></i>
+            Contact Us</a>
+        </li>
+      </ul>
     </div>
   </nav>
 
@@ -88,22 +112,31 @@
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>First Slide</h3>
-            <p>This is a description for the first slide.</p>
+            <h3>Spring means Mosquitoes!</h3>
+            <p>Due to the mild winter, our team prepared for a brutal mosquito season.
+              To alleviate all mosquito related problems, we adhere to a comprehensive
+              plan that will help you take back your yard!
+              Our program not only mitigates the presence of excessive mosquitoes,
+              but also breaks their breeding cycle to further reduce their impact on your family all season long.  </p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Second Slide</h3>
-            <p>This is a description for the second slide.</p>
+            <h3>Dog runs!</h3>
+            <p>Some infestations require special, more natural intervention.
+            Our dog runs involve the usage of our four humanely trained canine exterminators
+            in the sniffing out of rodents, mosquitoes, bed bugs, and termites.
+            Wherever pests may be, our dogs will find them.</p>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Third Slide</h3>
-            <p>This is a description for the third slide.</p>
+            <h3>New contact form!</h3>
+            <p>As part of our website overhaul, a new contact page has been created with convenience in mind,
+              making ordering service as easy as ordering a pizza.
+            Simply follow the prompts to notify us of your needs and we will reply within one business day!</p>
           </div>
         </div>
       </div>
@@ -121,7 +154,7 @@
   <!-- Page Content -->
   <div class="container">
 
-    <h1 class="my-4">Welcome to Modern Business</h1>
+    <h1 class="my-4">LET OUR FAMILY TAKE CARE OF YOURS</h1>
 
     <!-- Marketing Icons Section -->
     <div class="row">
