Mammal trapping page info finished. Changes to nav bar.

--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
         </p>
         <p>
           <abbr title="Email">E</abbr>:
-          <a href="mailto:name@example.com">name@example.com
+          <a href="mailto:calvertext.md@gmail.com">calvertext.md@gmail.com
           </a>
         </p>
         <p>
