--- a/index.html
+++ b/index.html
@@ -36,13 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="dog-runs.html">Dog Runs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html"></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
@@ -52,10 +46,10 @@
               Pest Index
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">Ants</a>
+              <a class="dropdown-item" href="ants.html">Ants</a>
               <a class="dropdown-item" href="portfolio-2-col.html">Bed Bugs</a>
               <a class="dropdown-item" href="portfolio-3-col.html">Cockroaches</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">Flies</a>
+              <a class="dropdown-item" href="flies.html">Flies</a>
               <a class="dropdown-item" href="portfolio-4-col.html">Mosquitoes</a>
               <a class="dropdown-item" href="portfolio-4-col.html">Rodents</a>
               <a class="dropdown-item" href="portfolio-4-col.html">Stinging Pests</a>
@@ -66,6 +60,18 @@
             </div>
           </li>
           <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Trapping
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="trapping.html">Info</a>
+              <a class="dropdown-item" href="mammals.html">Mammals</a>
+              <a class="dropdown-item" href="reptiles">Reptiles</a>
+
+              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+            </div>
+          </li>
+          <!--li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Blog
             </a>
@@ -74,8 +80,8 @@
               <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
               <a class="dropdown-item" href="blog-post.html">Blog Post</a>
             </div>
-          </li>
-          <li class="nav-item dropdown">
+          </li-->
+          <!--li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Other Pages
             </a>
@@ -86,15 +92,24 @@
               <a class="dropdown-item" href="404.html">404</a>
               <a class="dropdown-item" href="pricing.html">Pricing Table</a>
             </div>
+          </li-->
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">Why Calvert?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="https://twitter.com/CalvrtXtermin8r"><i class="fa fa-twitter"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.instagram.com/calvertexterminators/"><i class="fa fa-instagram"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.facebook.com/CalvertExterminators"><i class="fa fa-facebook"></i></a>
           </li>
         </ul>
       </div>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="contact.html"><i class="fa fa-envelope"></i>
+          <a class="nav-contact" href="contact.html"><i class="fa fa-envelope"></i>
             Contact Us</a>
         </li>
       </ul>
@@ -117,7 +132,7 @@
               To alleviate all mosquito related problems, we adhere to a comprehensive
               plan that will help you take back your yard!
               Our program not only mitigates the presence of excessive mosquitoes,
-              but also breaks their breeding cycle to further reduce their impact on your family all season long.  </p>
+              but also breaks their breeding cycle to further reduce their impact on your family all season long.</p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
@@ -156,13 +171,20 @@
 
     <h1 class="my-4">LET OUR FAMILY TAKE CARE OF YOURS</h1>
 
+
+
+    <div class="col-lg-8 mb-4">
+      <!-- Twitter feed -->
+      <a class="twitter-timeline" data-width="250" data-height="200" data-theme="dark" href="https://twitter.com/CalvrtXtermin8r?ref_src=twsrc%5Etfw">Tweets by CalvrtXtermin8r</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> <!--iframe-- width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe-->
+      </div>
+
     <!-- Marketing Icons Section -->
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">Dog Runs</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">Learn how we employ the expertly trained canine sense of our four dogs to find pests!</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
@@ -171,9 +193,9 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">Exterminating</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
+            <p class="card-text">Learn how we effectively locate and eliminate pests from all potential hiding places!</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
@@ -182,9 +204,9 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">Trapping</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">Learn how we humanely trap and relocate larger animals away from your property!</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
@@ -195,7 +217,7 @@
     <!-- /.row -->
 
     <!-- Portfolio Section -->
-    <h2>Portfolio Heading</h2>
+    <h2>Most Common Infestations</h2>
 
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
@@ -203,9 +225,9 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project One</a>
+              <a href="ants.html#carpenter">Flies</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+            <p class="card-text">From houseflies to fruit flies, they can carry many different diseases such as food poisoning bacteria.</p>
           </div>
         </div>
       </div>
@@ -214,9 +236,10 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Two</a>
+              <a href="#">Bed Bugs</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            <p class="card-text">After quickly spreading throughout a home, these parasites will feed on human blood while evading detection within
+            the very beds we sleep upon.</p>
           </div>
         </div>
       </div>
@@ -225,9 +248,10 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Three</a>
+              <a href="#">Ants</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
+            <p class="card-text">Ants venture into houses in search of food to grow intricate colonies in lawns and warm, dry soil.
+            There are many different species with different treatments necessary.</p>
           </div>
         </div>
       </div>
@@ -236,9 +260,10 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Four</a>
+              <a href="#">Wasps</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            <p class="card-text">Wasps can pest local animals in your yard and harm you with their stings.
+              Nests can be found in wall cavities, trees, bushes, and underground and can contain over 25,000 wasps.</p>
           </div>
         </div>
       </div>
@@ -247,9 +272,10 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Five</a>
+              <a href="#">Rats</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            <p class="card-text">Rats seek warm shelters, such as homes, and spread disease through their droppings while searching for food.
+            They chew through walls and cables, causing structural damage and fire hazards.</p>
           </div>
         </div>
       </div>
@@ -258,9 +284,46 @@
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Six</a>
+              <a href="#">Termites</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
+            <p class="card-text">Among the most destructive pests in the U.S., Termites cause an average of $7,000 to $8,000 to homes,
+            which is not insured by most house insurance policies.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="#">Mice</a>
+            </h4>
+            <p class="card-text">Smaller than rats, Mice will similarly nest in warm shelters such as walls and closets.
+            Constantly gnawing, they will damage furniture and food packaging while spreading disease in the process.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="#">Cockroaches</a>
+            </h4>
+            <p class="card-text">Cockroaches live in the kitchens and walls of warm homes, coming out at night to eat any type
+            of food and leaving diseases in their wake.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="#">Mosquitoes</a>
+            </h4>
+            <p class="card-text">With over 150 species in the U.S., Mosquitoes come out during warm temperatures of spring and summer.
+            They are host to many diseases due to feeding on a wide range of mammals.</p>
           </div>
         </div>
       </div>
@@ -268,7 +331,7 @@
     <!-- /.row -->
 
     <!-- Features Section -->
-    <div class="row">
+    <!--div class="row">
       <div class="col-lg-6">
         <h2>Modern Business Features</h2>
         <p>The Modern Business template by Start Bootstrap includes:</p>
@@ -286,20 +349,20 @@
       <div class="col-lg-6">
         <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
       </div>
-    </div>
+    </div-->
     <!-- /.row -->
 
     <hr>
 
     <!-- Call to Action Section -->
-    <div class="row mb-4">
+    <!--div class="row mb-4">
       <div class="col-md-8">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
       </div>
       <div class="col-md-4">
         <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
       </div>
-    </div>
+    </div-->
 
   </div>
   <!-- /.container -->
