Added second dropdown for trapping to contact page

--- a/mammals.html
+++ b/mammals.html
@@ -110,9 +110,9 @@
             </p>
             <h4>Treatment</h4>
             <p>Our skilled team will locate the bat and diagnose the most effective trap for the situation.</p>
-            <!--a class="btn btn-primary" href="#">View Project
+            <a class="btn btn-primary" href="contact.html/service-type=Bat">View Project
                 <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
+            </a>
         </div>
     </div>
     <!-- /.row -->
