--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">Contact
-      <small>Subheading</small>
+      <small>Schedule</small>
     </h1>
 
     <ol class="breadcrumb">
@@ -156,6 +156,51 @@
             </div>
           </div>
 
+          <!-- address-line1 input-->
+          <div class="control-group form-group">
+            <label class="control-label">Address Line 1:</label>
+            <div class="controls">
+              <input id="address-line1" name="address-line1" type="text" placeholder="address line 1"
+                     class="input-xlarge">
+              <p class="help-block">Street address, P.O. box, company name, c/o</p>
+            </div>
+          </div>
+          <!-- address-line2 input-->
+          <div class="control-group">
+            <label class="control-label">Address Line 2:</label>
+            <div class="controls">
+              <input id="address-line2" name="address-line2" type="text" placeholder="address line 2"
+                     class="input-xlarge">
+              <p class="help-block">Apartment, suite , unit, building, floor, etc.</p>
+            </div>
+          </div>
+          <!-- city input-->
+          <div class="control-group">
+            <label class="control-label">City / Town:</label>
+            <div class="controls">
+              <input id="city" name="city" type="text" placeholder="city" class="input-xlarge">
+              <p class="help-block"></p>
+            </div>
+          </div>
+          <!-- region input-->
+          <div>
+            <label class="control-label">State / Province / Region:</label>
+            <select class="custom-select" id="region">
+              <option value="MD" selected>Maryland</option>
+              <option value="DC">Washington DC</option>
+              <option value="VA">Virginia</option>
+            </select>
+          </div>
+          <!-- postal-code input-->
+          <div class="control-group">
+            <label class="control-label">Zip / Postal Code:</label>
+            <div class="controls">
+              <input id="postal-code" name="postal-code" type="text" placeholder="zip or postal code"
+                     class="input-xlarge">
+              <p class="help-block"></p>
+            </div>
+          </div>
+          <!-- dropdowns -->
           <div>
             <label>Reason for contact:</label>
             <select class="custom-select" id="service-exist">
@@ -164,24 +209,47 @@
               <option value="New">Contracting a new service</option>
             </select>
           </div>
-          <div>
-            <select class="custom-select" id="service-type">
-              <option selected>Type of service...</option>
-              <option value="Mosquito">Mosquito control</option>
-              <option value="Rodent">Rodent control</option>
-              <option value="Termite">Termite control</option>
-            </select>
-          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <select class="custom-select" id="service-type-pest">
+                  <option selected>Type of pest...</option>
+                  <option value="Ant">Ant control</option>
+                  <option value="Bed bug">Bed bug control</option>
+                  <option value="Cockroach">Cockroach control</option>
+                  <option value="Fly">Fly control</option>
+                  <option value="Mosquito">Mosquito control</option>
+                  <option value="Rodent">Rodent control</option>
+                  <option value="Stinging pest">Stinging pest control</option>
+                  <option value="Termite">Termite control</option>
+              </select>
+            </div>
+            <div class="col-sm-6">
+              <select class="custom-select" id="service-type-trap">
+                  <option selected>Type of trapping...</option>
+                  <option value="Bat">Bat trapping</option>
+                  <option value="Beaver">Beaver trapping</option>
+                  <option value="Coyote">Coyote trapping</option>
+                  <option value="Fox">Fox trapping</option>
+                  <option value="Opossum">Opossum trapping</option>
+                  <option value="Raccoon">Raccoon trapping</option>
+                  <option value="Skunk">Skunk trapping</option>
 
+                  <option value="Black snake">Black snake trapping</option>
+                  <option value="Copperhead">Copperhead trapping</option>
+                  <option value="Garter snake">Garter snake trapping</option>
+                  <option value="Water snake">Water snake trapping</option>
+              </select>
+            </div>
+          </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>Message:</label>
-              <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
+              <label>Additional notes:</label>
+              <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your additional notes" maxlength="999" style="resize:none"></textarea>
             </div>
           </div>
           <div id="success"></div>
           <!-- For success/fail messages -->
-          <button type="submit" class="btn btn-primary" id="sendMessageButton">Send Message</button>
+          <button type="submit" class="btn btn-primary" id="sendMessageButton">Submit</button>
         </form>
       </div>
 
