--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
               <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
             </div>
           </li>
+
+          <!--li class="nav-item search">
+            <form class="form-inline mr-auto">
+              <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+              <button class="btn btn-mdb-color btn-rounded btn-sm my-0 ml-sm-2" type="submit"><i class="fa fa-search text-white"></i></button>
+            </form>
+          </li-->
           <!--li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Blog
@@ -107,13 +114,13 @@
           </li>
         </ul>
       </div>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-contact" href="contact.html"><i class="fa fa-envelope"></i>
-            Contact Us</a>
-        </li>
-      </ul>
     </div>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-contact" href="contact.html"><i class="fa fa-envelope"></i>Contact Us</a>
+        </a>
+      </li>
+    </ul>
   </nav>
 
   <header>
@@ -171,10 +178,8 @@
 
     <h1 class="my-4">LET OUR FAMILY TAKE CARE OF YOURS</h1>
 
-
-
+    <!-- Twitter Feed -->
     <div class="col-lg-8 mb-4">
-      <!-- Twitter feed -->
       <a class="twitter-timeline" data-width="250" data-height="200" data-theme="dark" href="https://twitter.com/CalvrtXtermin8r?ref_src=twsrc%5Etfw">Tweets by CalvrtXtermin8r</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> <!--iframe-- width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe-->
       </div>
 
