Finished reptiles page content

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,6 @@
 
   <!-- Page Content -->
   <div class="container">
-
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">Contact
       <small>Schedule</small>
@@ -130,7 +129,8 @@
     <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
     <div class="row">
       <div class="col-lg-8 mb-4">
-        <h3>Send us a Message</h3>
+        <h3>Schedule an Appointment</h3>
+        <p66>Just follow the forms and we'll get back to you with a time available in one business day!</p66>
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="control-group form-group">
             <div class="controls">
