--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="trapping.html">Info</a>
               <a class="dropdown-item" href="mammals.html">Mammals</a>
-              <a class="dropdown-item" href="reptiles">Reptiles</a>
+              <a class="dropdown-item" href="reptiles.html">Reptiles</a>
 
               <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
             </div>
@@ -177,6 +177,8 @@
   <div class="container">
 
     <h1 class="my-4">LET OUR FAMILY TAKE CARE OF YOURS</h1>
+    <h4 class="my-4">Here at Calvert Exterminators, we strive to combine the professional quality of bigger names with the personal feel of local business.</h4>
+
 
     <!-- Twitter Feed -->
     <div class="col-lg-8 mb-4">
