--- a/reptiles.html
+++ b/reptiles.html
@@ -103,13 +103,12 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3 id="carpenter">Bats</h3>
-            <p>With ten species in Maryland, bats can live in MD all year long while other migrate here in the spring and fall.
-                They live and hunt nocturnally in large colonies or small families. Young bats can occasionally enter houses
-                and will explore for a way out. Bats can be known to carry diseases such as rabies and histoplasmosis.
+            <h3 id="carpenter">Black Snakes</h3>
+            <p>Growing up to 80 inches long (6.5 feet), Black Snakes are very helpful in eliminating rats and mice.
+                Despite being harmless to humans, Black Snakes are intimidating to look at and may need to be removed.
             </p>
             <h4>Treatment</h4>
-            <p>Our skilled team will locate the bat and diagnose the most effective trap for the situation.</p>
+            <p>Our skilled team will locate the snake and diagnose the most effective trap for the situation.</p>
             <!--a class="btn btn-primary" href="contact.html/service-type=Bat">View Project
                 <span class="glyphicon glyphicon-chevron-right"></span>
             </a-->
@@ -127,11 +126,12 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Beavers</h3>
-            <p>Beavers are among the largest rodents in North America and if left untreated will cut down over 200 trees per year.
-            Living near the water, they will cut down trees to dam up streams and rivers to create ponds for food.</p>
+            <h3>Copperhead</h3>
+            <p>The Northern Copperhead is the only venomous snake in the DC metropolitan area, with a deep reddish brown color with dark hourglass-shaped markings on its back,
+                this predator can grow to 3 feet and prefers rocky, wooded areas.
+            </p>
             <h4>Treatment</h4>
-            <p>Our experienced exterminators will follow the clues to locate the beaver in question and employ an efficient trap.</p>
+            <p>Our experienced exterminators will follow the clues to locate the snake in question and employ an efficient trap.</p>
             <!--a class="btn btn-primary" href="#">View Project
                 <span class="glyphicon glyphicon-chevron-right"></span>
             </a-->
@@ -149,11 +149,12 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Coyotes</h3>
-            <p>Resembling small German Shephard dogs, coyotes have begun to appear in Western Maryland as early as 1972 and have boomed since then.
-            Coyotes prey on pets and roaming strays in suburban areas and livestock in rural areas. Rapid decline of free roaming animals is a common sign of coyotes.</p>
+            <h3>Garter Snakes</h3>
+            <p>The Eastern Garter Snake is a common snake known for the three white or yellow stripes that run down its back.
+            Garter snakes are non-venomous and eat earthworms, millipedes, spiders, insects, salamanders, small fish, frogs, and toads.
+            Despite being non-venomous, garter snakes still pose a threat in their aggressive territorial nature, biting humans and sometimes causing allergic reactions.</p>
             <h4>Treatment</h4>
-            <p>Our experts will follow the clues left by coyotes to leave baited traps in areas that will bring the best results.</p>
+            <p>Our experts will follow the clues left by garter snakes to leave baited traps in areas that will bring the best results.</p>
             <!--a class="btn btn-primary" href="#">View Project
                 <span class="glyphicon glyphicon-chevron-right"></span>
             </a-->
@@ -172,110 +173,11 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Foxes</h3>
-            <p>With two species in Maryland, red and gray, foxes resemble small dogs and are a threat to livestock and pets.
-            Some foxes have been known to carry rabies.</p>
+            <h3>Water snakes</h3>
+            <p>The northern water snake is an aquatic snake that dwells in lakes, swamps, streams, and other waterways around the Chesapeake Bay watershed.
+            With a heavy body, large rounded head, and a pattern of black or reddish blotches on their backs, water snakes are non-venomous and aggressive when threatened.</p>
             <h4>Treatment</h4>
             <p>Our team will follow the most minute hints to employ the most effective traps in the most efficient locations.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
-        </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
-    <!-- Project Five -->
-    <div class="row">
-
-        <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-            </a>
-        </div>
-        <div class="col-md-5">
-            <h3>Opossums</h3>
-            <p>Oppossums are marsupials with grayish white fur that covers all but their ears and tail, which is long and scaly.
-                They are abundant in Maryland and prefer woods near water and urban and suburban environments.
-                They are effective in lowering the tick population.
-                They are commonly aggressive scavengers and carry disease.</p>
-            <h4>Treatment</h4>
-            <p>Our team will use the most effective process to safely trap and relocate opossums away from your property.</p>
-            <a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
-        </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
-    <!-- Project Six -->
-    <div class="row">
-
-        <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-            </a>
-        </div>
-        <div class="col-md-5">
-            <h3>Raccoons</h3>
-            <p>Raccoons are abundant in Maryland, with short legs, a striped tail, grayish black fur, and a telltale black "mask" around their eyes.
-            They are a nuissance to animals and humans, well adapted to urban and suburban areas. They will enter homes, basements, attics, and other structures in search of food.
-            Raccoons cause over 60% of rabies cases in Maryland and can cause canine distemper and parvovirus in domestic dogs.</p>
-            <h4>Treatment</h4>
-            <p>Our skilled professionals will use all available clues to find and effectively trap raccoons.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
-        </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
-    <!-- Project Five -->
-    <div class="row">
-
-        <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-            </a>
-        </div>
-        <div class="col-md-5">
-            <h3>Skunks</h3>
-            <p>Eastern striped skunks are common in the U.S. and are identified easily by their black fur with two white stripes going down their back.
-            When threatened, skunks will either flee or stand their ground, stomping their front two legs as a warning.
-            If they continue to feel threatened, they will spray butyl mercaptan, a foul smelling liquid, from their backside at their aggressor.
-            Skunks can harass homes and business by scavenging trash and spraying people.</p>
-            <h4>Treatment</h4>
-            <p>Our experts will follow clues big and small to find the skunk and use the appropriate trapping method.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
-        </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
-    <!-- Project Five -->
-    <div class="row">
-
-        <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-            </a>
-        </div>
-        <div class="col-md-5">
-            <h3>Squirrels</h3>
-            <p>With four species in Maryland being gray, red, flying, and fox, squirrels nest in trees and can be an annoyance in their chattering and barking.
-                Most squirrels in urban areas are rather tame, yet have been know to nest in warm household rooms, such as attics, to escape the cold.
-                Once they have nested in a home, squirrels will chew through insulation and wiring to create fire hazards. They can also infrequently transmit rabies.
-            </p>
-            <h4>Treatment</h4>
-            <p>Our team will follow the clues straight to the nest before trapping and relocating the squirrels using the most effective methods.</p>
             <!--a class="btn btn-primary" href="#">View Project
                 <span class="glyphicon glyphicon-chevron-right"></span>
             </a-->
