Changed http to https for secure connection

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item active" style="background-image: url('https://placehold.it/1900x1080')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Spring means Mosquitoes!</h3>
             <p>Due to the mild winter, our team prepared for a brutal mosquito season.
@@ -143,7 +143,7 @@
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('https://placehold.it/1900x1080')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Dog runs!</h3>
             <p>Some infestations require special, more natural intervention.
@@ -229,7 +229,7 @@
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="ants.html#carpenter">Flies</a>
@@ -240,7 +240,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Bed Bugs</a>
@@ -252,7 +252,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Ants</a>
@@ -264,7 +264,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Wasps</a>
@@ -276,7 +276,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Rats</a>
@@ -288,7 +288,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Termites</a>
@@ -300,7 +300,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Mice</a>
@@ -312,7 +312,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Cockroaches</a>
@@ -324,7 +324,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Mosquitoes</a>
