--- a/ants.html
+++ b/ants.html
@@ -99,7 +99,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -125,7 +125,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -150,7 +150,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -174,7 +174,7 @@
 
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
