--- a/mammals.html
+++ b/mammals.html
@@ -99,7 +99,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -123,7 +123,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -145,7 +145,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -168,7 +168,7 @@
 
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -191,7 +191,7 @@
 
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -216,7 +216,7 @@
 
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -240,7 +240,7 @@
 
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -265,7 +265,7 @@
 
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
