--- a/reptiles.html
+++ b/reptiles.html
@@ -99,7 +99,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -122,7 +122,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -145,7 +145,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -169,7 +169,7 @@
 
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
