--- a/index.html
+++ b/index.html
@@ -23,8 +23,35 @@
 
 <body>
 
+  <!-- COVID Banner -->
+  <!--div class="container-fluid">
+    <div style="background-color: #006FBF;">
+      <div class="row">
+        <div class="col-md-8">
+          <div class="aligner">
+            <a href="https://www.cummingsinstitute.com"><img src="////libapps.s3.amazonaws.com/accounts/50418/images/cgibannerwhitesm.png" alt="Cummings Graduate Institute logo"></a>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="topbar">
+            <p class="navbar-text navbar-right actions">
+              <style>
+                a {color:#fff;}
+                a:hover {color: #ffba59;}
+              </style>
+              <a href="http://search.ebscohost.com/login.aspx?authtype=ip,cpid&amp;custid=ns247953&amp;profile=ehost">Create Account&nbsp;&nbsp;</a>
+              <a href="https://search.ebscohost.com/Login.aspx" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-log-in"></span>&nbsp;LOG IN</a>
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div-->
+
   <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img classs="img-responsive" width="130px" height="" src="CalvertExt-logo.png" style="position:relative;">
@@ -134,12 +161,10 @@
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div class="carousel-item active" style="background-image: url('https://placehold.it/1900x1080')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Spring means Mosquitoes!</h3>
-            <p>Due to the mild winter, our team prepared for a brutal mosquito season.
-              To alleviate all mosquito related problems, we adhere to a comprehensive
-              plan that will help you take back your yard!
-              Our program not only mitigates the presence of excessive mosquitoes,
-              but also breaks their breeding cycle to further reduce their impact on your family all season long.</p>
+            <h3>Got Termites?</h3>
+            <p>We’re receiving many calls for termites! The recent mild winter wasn't enough to cut down on them and now they're in our houses!
+              These pests can cause massive amounts of damage in very little time. A termite queen can live 15 to 25 years and lay an egg every 15 seconds.
+              The average cost in the US to repair termite damage is $3,300, so what are you waiting for? Call us now to save your home and YOUR WALLET!</p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
@@ -176,8 +201,13 @@
   <!-- Page Content -->
   <div class="container">
 
-    <h1 class="my-4">LET OUR FAMILY TAKE CARE OF YOURS</h1>
-    <h4 class="my-4">Here at Calvert Exterminators, we strive to combine the professional quality of bigger names with the personal feel of local business.</h4>
+    <!-- Call to Action Well -->
+    <div class="card text-white bg-secondary my-5 py-4 text-center">
+      <div class="card-body">
+        <h1>LET OUR FAMILY TAKE CARE OF YOURS</h1>
+        <p class="text-white m-0">Here at Calvert Exterminators, we strive to combine the professional quality of bigger names with the personal feel of local business.</p>
+      </div>
+    </div>
 
 
     <!-- Twitter Feed -->
